# fastlz-rs

./: .gitignore  Cargo.toml  README.md
src/: compress.rs  decompress.rs  lib.rs  util.rs  wasmtester.rs
testtool/: build-wasm.sh  build.sh  fastlz.wasm
