[package]
name = "fastlz-rs"
description = "Pure-Rust reimplementation of FastLZ"
repository = "https://github.com/ArcaneNibble/fastlz-rs"
categories = ["no-std::no-alloc", "compression"]
keywords = ["lz77", "fastlz"]
license = "0BSD"
version = "0.0.1"
edition = "2021"

[dependencies]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
