[package]
name = "fastlz-rs"
description = "Pure-Rust reimplementation of FastLZ"
repository = "https://github.com/ArcaneNibble/fastlz-rs"
categories = ["no-std::no-alloc", "compression"]
keywords = ["lz77", "fastlz"]
license = "0BSD"
version = "0.0.2"
edition = "2021"

[dev-dependencies]
wasmi = "0.36"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
